<resources>
    <string name="app_name">Admin_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoryname">CategoryName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Login</string>
    <string name="choose_category_image">Choose Category Image</string>
    <string name="product_name">product name</string>
    <string name="_0_0">$ 0.0</string>
    <string name="product_description">product description</string>
    <string name="extra">Extra</string>
    <string name="product_available">Product Available</string>
    <string name="save">Save</string>
    <string name="choose_product_image">choose product image</string>
    <string name="extra_item_name">Extra item name</string>
    <string name="_0_00">$ 0.00</string>
    <string name="extra_title">Extra title</string>


</resources>