<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    android:background="@color/white"
    android:gravity="center">

    <EditText
        android:id="@+id/edtExtraTitle"
        style="@style/editTextStyle"
        android:hint="@string/extra_title"/>
    <EditText
        android:id="@+id/edtExtraPrice"
        style="@style/editTextStyle"
        android:hint="@string/_0_0"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/buttonStyle"
        android:text="@string/save"
        android:layout_marginTop="@dimen/dp_16"
        />

</LinearLayout>