<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetailActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/txtProductImageTitle"
            android:text="@string/choose_product_image"
            style="@style/textViewStyle"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/imageSelection"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/baseline_picture_in_picture_24"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectImageButton"
            style="@style/buttonStyle"
            android:text="select Image"
            android:background="@color/darkBlue"
            />



<!--        <ImageView-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:src="@drawable/pizza"-->
<!--        android:layout_marginTop="@dimen/dp_16"-->
<!--        />-->
        <EditText
            android:id="@+id/edtProductName"
            style="@style/editTextStyle"
            android:hint="@string/product_name"
            android:layout_marginTop="@dimen/dp_16" />

        <EditText
            android:id="@+id/edtDescription"
            style="@style/editTextStyle"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/product_description" />

        <EditText
            android:id="@+id/edtProductPrice"
            style="@style/editTextStyle"
            android:hint="@string/_0_0"
            android:layout_marginTop="@dimen/dp_16"
            android:textAlignment="center"/>



    <LinearLayout
        android:id="@+id/llyIsAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8">

        <TextView
            style="@style/textViewStyle"
            android:text="@string/product_available"
            android:textAlignment="textStart"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/chkIsAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llyExtra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/lightLime"
        android:paddingEnd="@dimen/dp_18">
    <TextView
        android:id="@+id/txtExtra"
        style="@style/textViewStyle"
        android:text="@string/extra"
        android:textAlignment="textStart"
        android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_add_24"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        android:layout_marginTop="@dimen/dp_8"
        android:padding="@dimen/dp_4"
        android:id="@+id/recyclerViewExtras"/>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/buttonStyle"
        android:text="@string/save"
        android:layout_marginTop="@dimen/dp_16"
        />

    </LinearLayout>
</ScrollView>
</LinearLayout>